test/fixtures/type-error/ifConditionNonBoolean.ro
fun x():f32 =
  if (1.2)
    1.0
  else
    0.0
